--- a/剑指offer/index.html
+++ b/剑指offer/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./js/和为s的连续正数序列.js"></script>
 </head>
 <body>
     <p>测试用例</p>
